# reelsbot

./: .env.example  .gitignore  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  login.py  pyproject.toml
deploy/: Dockerfile  default.conf
deploy/prod/: default.conf
deploy/settings/: amaprograma3.json
deploy/test/: nginx.conf
src/: instagram.py  loader.py  login.py  main.py  manager.py
src/instagram/: client.py
tests/: test_get_reel_shortcode_from_string.py
