[tool.poetry]
name = "reelsbot"
version = "0.1.0"
description = ""
authors = ["Abdullakh Mursalov <a.k.mursalov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = {version = "20.3", extras = ["webhooks"]}
python-dotenv = "^0.21.1"
sentry-sdk = "^1.23.1"
instagrapi = "^1.17.10"
pillow = "^9.4.0"
pytube = "^12.1.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
