[tool.poetry]
name = "reelsbot"
version = "0.1.0"
description = ""
authors = ["Abdullakh Mursalov <a.k.mursalov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = {version = "20.4", extras = ["webhooks"]}
python-dotenv = "1.0.0"
sentry-sdk = "1.29.2"
instagrapi = "1.19.7"
pillow = "^9.4.0"
pytube = "15.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
